Adding collapse animation for button see maps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".OrderInfoActivity"
             android:parentActivityName=".MainActivity"
-            android:label="Detail">
+            android:label="Detail Pemesanan">
         </activity>
         <activity android:name=".Pemesanan" />
         <!--
@@ -39,10 +39,10 @@
             android:label="@string/title_activity_main">
         </activity>
         <activity android:name=".LoginActivity">
-             <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
-                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
     </application>
