--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:parentActivityName=".MainActivity"
             android:label="Detail">
         </activity>
-        <activity android:name=".Pemesanan" />
+        <activity android:name=".PemesananActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
