Editing Login and Register Layout (unfinished by 15%)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,37 +14,41 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OrderInfoActivity"
+
+        <activity
+            android:name=".OrderInfoActivity"
             android:parentActivityName=".MainActivity"
             android:label="Detail Pemesanan">
         </activity>
-        <activity android:name=".Pemesanan" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".Pemesanan" />
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key" />
 
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main">
-        </activity>
-        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" />
+
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/FullScreen">
+        </activity>
+
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/FullScreen"/>
+
     </application>
 
 </manifest>
